# statscore

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/statscore-bayesian/: Cargo.toml
crates/statscore-bayesian/docs/: README.md
crates/statscore-bayesian/src/: lib.rs
crates/statscore-categorical/: Cargo.toml
crates/statscore-categorical/docs/: README.md
crates/statscore-categorical/src/: lib.rs
crates/statscore-common/: Cargo.toml
crates/statscore-common/docs/: README.md
crates/statscore-common/src/: error.rs  lib.rs  types.rs
crates/statscore-common/src/numerics/: mod.rs  stable.rs
crates/statscore-common/src/traits/: distribution.rs  estimator.rs  mod.rs  test.rs
crates/statscore-compute/: Cargo.toml
crates/statscore-compute/docs/: README.md
crates/statscore-compute/src/: lib.rs
crates/statscore-descriptive/: Cargo.toml
crates/statscore-descriptive/docs/: README.md
crates/statscore-descriptive/src/: lib.rs
crates/statscore-distributions/: Cargo.toml
crates/statscore-distributions/benches/: distributions.rs
crates/statscore-distributions/docs/: README.md
crates/statscore-distributions/examples/: microbench.rs
crates/statscore-distributions/src/: lib.rs  util.rs
crates/statscore-distributions/src/continuous/: beta.rs  chi_squared.rs  exponential.rs  f_distribution.rs  gamma.rs  mod.rs  normal.rs  student_t.rs  uniform.rs
crates/statscore-distributions/src/discrete/: binomial.rs  geometric.rs  mod.rs  poisson.rs
crates/statscore-fuzzy/: Cargo.toml
crates/statscore-fuzzy/docs/: README.md
crates/statscore-fuzzy/examples/: fuzzy_basics.rs
crates/statscore-fuzzy/src/: lib.rs  logic.rs  sets.rs  statistics.rs  traits.rs
crates/statscore-hypothesis/: Cargo.toml
crates/statscore-hypothesis/docs/: README.md
crates/statscore-hypothesis/src/: lib.rs
crates/statscore-information/: Cargo.toml
crates/statscore-information/docs/: README.md
crates/statscore-information/src/: lib.rs
crates/statscore-linalg/: Cargo.toml
crates/statscore-linalg/docs/: README.md  decompositions.md  errors.md  examples.md  matrix.md  properties.md  solve.md
crates/statscore-linalg/src/: lib.rs  properties.rs  solve.rs
crates/statscore-linalg/src/decompositions/: cholesky.rs  eigen.rs  mod.rs  qr.rs  svd.rs
crates/statscore-linalg/src/matrix/: constructors.rs  mod.rs  types.rs
crates/statscore-multivariate/: Cargo.toml
crates/statscore-multivariate/docs/: README.md
crates/statscore-multivariate/src/: lib.rs
crates/statscore-probability/: Cargo.toml
crates/statscore-probability/docs/: README.md
crates/statscore-probability/src/: lib.rs
crates/statscore-python/: Cargo.toml  pyproject.toml
crates/statscore-python/benches/: bench_statscore_numpy.py  bench_vs_numpy.py  bench_vs_scipy.py  bench_vs_skfuzzy.py
crates/statscore-python/docs/: README.md  performance.md
crates/statscore-python/examples/: demo_distributions.py  demo_fuzzy.py
crates/statscore-python/src/: convert.rs  distributions.rs  error.rs  fuzzy.rs  lib.rs
crates/statscore-python/tests/: test_distributions.py  test_fuzzy.py
crates/statscore-quality/: Cargo.toml
crates/statscore-quality/docs/: README.md
crates/statscore-quality/src/: lib.rs
crates/statscore-regression/: Cargo.toml
crates/statscore-regression/docs/: README.md
crates/statscore-regression/src/: lib.rs
crates/statscore-simulation/: Cargo.toml
crates/statscore-simulation/docs/: README.md
crates/statscore-simulation/src/: lib.rs
crates/statscore-special/: Cargo.toml
crates/statscore-special/docs/: README.md
crates/statscore-special/src/: bessel.rs  beta.rs  combinatorics.rs  erf.rs  gamma.rs  lib.rs
crates/statscore-survival/: Cargo.toml
crates/statscore-survival/docs/: README.md
crates/statscore-survival/src/: lib.rs
crates/statscore-timeseries/: Cargo.toml
crates/statscore-timeseries/docs/: README.md
crates/statscore-timeseries/src/: lib.rs
