[package]
name = "statscore-common"
description = "Shared traits, error types, and numeric utilities for statscore"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = "2.0.18"
rand = "0.10.1"
num-traits = "0.2.19"
ndarray = "0.17.2"
approx = "0.5.1"

[lints]
workspace = true
