[package]
name = "statscore-compute"
description = "Hardware acceleration backends for statscore (CUDA, # for later Metal & wgpu)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
rayon = "1.12.0"
statscore-common = { workspace = true }

# CUDA backend — requires CUDA toolkit installed
[features]
default = []

cuda = [
    "dep:cudarc",
]
metal = [
    "dep:metal",
    "dep:objc",
]
wgpu = [
    "dep:wgpu",
    "dep:pollster",
]

[dependencies.cudarc]
version  = "0.19.7"
optional = true
features = ["cublas", "curand", ]

[dependencies.metal]
version  = "0.33.0"
optional = true

[dependencies.objc]
version  = "0.2"
optional = true

[dependencies.wgpu]
version  = "29.0.3"
optional = true

[dependencies.pollster]
version  = "0.4.0"
optional = true

[lints]
workspace = true
