[package]
name = "statscore-descriptive"
description = "Descriptive statistics: univariate, bivariate, rank, and robust estimators"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]

[lints]
workspace = true
