[package]
name = "statscore-distributions"
description = "Probability distributions: continuous, discrete, and multivariate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
statscore-common = { workspace = true }
statscore-special = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

[dev-dependencies]
approx = "0.5.1"
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "distributions"
harness = false

[lints]
workspace = true
