[package]
name = "statscore-fuzzy"
description = "Fuzzy sets, fuzzy logic, and fuzzy statistics for the statscore workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
statscore-common = { workspace = true }

[lints]
workspace = true
