[package]
name = "statscore-linalg"
description = "Statistical linear algebra: decompositions, solvers, matrix properties"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
statscore-common = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
approx = "0.5.1"
rand = { workspace = true }

[lints]
workspace = true
