[package]
name = "statscore-python"
description = "Python bindings for statscore via PyO3"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
name = "statscore"
crate-type = ["cdylib"]

[dependencies]
statscore-common = { workspace = true }
statscore-distributions = { workspace = true }
pyo3 = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
